--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,5 @@
 qa_environment=https://qa-environment.crystalkeyhotels.com/
+Login = https://qa-environment.crystalkeyhotels.com/Account/Logon
 manager_username=manager
 manager_password=Manager2!
 expectedReservationSuccessMessage=RoomReservation was inserted successfully
