--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
             <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- SQL -->
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>8.2.2.jre8</version>
+        </dependency>
 
     </dependencies>
 
@@ -105,4 +111,6 @@
             </plugin>
         </plugins>
     </build>
+
+
 </project>
